# claude-cli-setup

./: .dockerignore  .env.example  Dockerfile  README.en.md  README.md  README.zh.md  docker-compose.yml  launch-claude.py  launch-pi.py
docker/: apply-rootless-port-forward.sh  bootstrap-claude-build.sh  build-mcp.sh  build_wrapper.py  compose.proj2.yml  compose.proj3.yml  entrypoint.sh  gen-models-json.py  install-node.sh  rootless-docker.override.conf  setup-dev-user.sh  setup-mcp-yarn.sh  setup-zsh.sh
docker/claude-settings/: keybindings.json
docker/mcp/: package.json
docker/zsh/: zshenv  zshrc.fragment
inf-splitter/: .gitignore  Cargo.toml  Dockerfile  README.md
inf-splitter/src/: config.rs  error.rs  local.rs  main.rs  remote.rs  router.rs
openspec/changes/add-spec-from-project-code/: proposal.md  tasks.md
openspec/changes/add-spec-from-project-code/specs/: container-runtime_delta.md  docker-build_delta.md  documentation_delta.md  mcp-toolchain_delta.md  python-launcher_delta.md
openspec/changes/archive/2026-06-30-launcher-tree-scroll/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-30-launcher-tree-scroll/specs/project-launcher/: spec.md
openspec/changes/archive/2026-06-30-optimize-entrypoint-chmod/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-30-optimize-entrypoint-chown/: design.md  proposal.md  tasks.md
openspec/specs/build-networking/: spec.md
openspec/specs/docker-runtime/: spec.md
openspec/specs/project-launcher/: spec.md
(+2 files in other folders)
